--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
         <div class="row">
             <div class="col-8">
                 <h1> Welcom to Mychatab othmane</h2>
-                    <p1> Ce site et développer par Moi : Aboujaafar othmane, et je veux remerci Ibtissame Fankouch et le pro développeur Abdelilah Boutizoua et Ayoub Hammadou.</p1>
+                    <p1> Cette application et développer par Moi : Aboujaafar othmane, E</p1>
             </div>
             <div class="col-4">
                 <img src="favicon.ico" class="img-responsive img-thumbnail">
